--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "node-notifier": "^5.4.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Michaelgirgis1/WorkShop-Eraasoft.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Michaelgirgis1/WorkShop-Eraasoft/issues"
+  },
+  "homepage": "https://github.com/Michaelgirgis1/WorkShop-Eraasoft#readme"
 }
